# Piscine-Python

./: README.md
Python_00/ex00/: Hello.py
Python_00/ex01/: format_ft_time.py
Python_00/ex02/: find_ft_type.py
Python_00/ex03/: NULL_not_found.py
Python_00/ex04/: whatis.py
Python_00/ex05/: building.py
Python_00/ex06/: filterstring.py  ft_filter.py
Python_00/ex07/: sos.py
Python_00/ex08/: Loading.py
Python_00/ex09/: LICENSE  pyproject.toml
Python_00/ex09/ft_package/: __init__.py  package.py
ex00/: Hello.py
